@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-13T00:36:21Z",
-  "count_outdated" : 1481,
-  "uniques_outdated" : 379,
-  "count" : 1514,
-  "uniques" : 399,
+  "timestamp" : "2022-05-13T08:07:10Z",
+  "count_outdated" : 1482,
+  "uniques_outdated" : 380,
+  "count" : 1515,
+  "uniques" : 400,
   "clones" : [
-    {
-      "timestamp": "2022-04-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 1,
@@ -79,6 +72,13 @@
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 3,
       "count_minmax": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
