@@ -3,11 +3,6 @@
   "uniques": 10,
   "clones": [
     {
-      "timestamp": "2022-04-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -55,6 +50,11 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
