@@ -1,3 +1,9 @@
+2022-05-13T08:07:10Z:
+* notice: last 14d: all unq: 33 10
+* notice: prev accum: outdated-all outdated-unq / all unq: 1481 379 / 1514 399
+* notice: next accum: outdated-all outdated-unq / all unq: 1482 380 / 1515 400
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +2 -0 -0
+
 2022-05-13T00:36:21Z:
 * notice: last 14d: all unq: 33 10
 * notice: prev accum: outdated-all outdated-unq / all unq: 1479 378 / 1512 399
